resized the images and added margin to section container to avoid overlapping

--- a/style.css
+++ b/style.css
@@ -102,44 +102,40 @@ button{
     transition: scale 0.5 ease;
 }
 button:hover{
-    background-color: #fff;
+    background-color: #ffa500;
 }
 /*main section*/
 section{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: -6rem;
 }
 .section-container1,
 .section-container2,
 .section-container3,
 .section-container4,
 .section-container5{
-    width: 130ch;
+    width: 110ch;
     display: flex;
-    margin-bottom: 0;
 }
 .section-container2,
 .section-container4{
     flex-direction: row-reverse;
 }
-
-
 .section-content{
-    margin: 10rem 2.5rem;
+    margin: 8rem 2.5rem;
 }
 section img{
     transform: scaleY(0.5);
     max-width: 500px;
     border-radius: 20px;
-    margin: 2rem;
 }
 /*CONTACT US*/
 .contact-info{
     width: 45ch;
     text-align: left;
-    margin: 5rem auto;
+    margin: 5rem 2rem;
     padding: 4rem auto;
     line-height: 1.5rem;
 }
@@ -178,19 +174,26 @@ section img{
 /*ABOUT US*/
 .content{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    max-height: 100vh;
+    overflow: hidden;
+    margin-bottom: -4rem;
+    margin-top: -5rem;
 }
 .profile{
-    width: 60ch;
+    width: 50ch;
+}
+.image{
+    margin: 3rem;
 }
 footer{
+    margin-top: 10rem;
     text-align: center;
 }
 @media screen and (max-width: 992px) {
     body{
         width: 100%;
-        padding: 0 20px;
         text-align: center;
     }
     nav{
@@ -201,28 +204,7 @@ footer{
         text-align: center;
         margin: 0;
     }
-    section img{
-        width: 90%;
-        margin: auto;
-        text-align: center;
-    }
-    article{
-        width: 90%;
-        flex-direction: column;
-        text-align: center;
-
-    }
-    .profile{
-        width: 45ch;
-        margin: 1rem;
-        text-align: center;
-        
-    }
-    button{
-        width: 80%;
-    }
     section{
-        width: 100%;
         flex-direction: column;
         text-align: center;
     }
@@ -232,22 +214,36 @@ footer{
     .section-container4,
     .section-container5{
         width: 50ch;
-        flex-direction: column-reverse;
-        margin: auto 5rem;
+        flex-direction: column;
+        margin-bottom: 5rem;
+    }
+    .section-content{
+        margin-bottom: -5rem;
+    }
+    .illustration{
+        margin-bottom: -2rem;
+    }
+    img{
+        width: 85%;
     }
     .content{
-        flex-direction: column;
+        max-height: 1800px;
+        flex-direction: column-reverse;
         text-align: center;
+        margin-top: 2rem;
     }
-    .contact-form{
-        flex-direction: column;
+    .profile{
+        width: 40ch;
+        margin-top: -7rem;
+    }
+    .image{
+        width: 100%;
+        margin-top: -5rem;
+    }
+    .contact-info{
         text-align: center;
+        width: 40ch;
     }
-
-    footer{
-        text-align: center;
-    }
-
     
 }
 
